# flint

./: .gitmodules  Cargo.toml  README.md  build.rs  justfile  rustfmt.toml
examples/: rlint.yaml  rust.yaml
src/: arguments.rs  checker.rs  common.rs  config.rs  guesser.rs  language.rs  main.rs  parser.rs  path_ext.rs  query_config.rs  rule.rs  severity.rs  walker.rs
tests/: integration.rs
