[package]
name = "flint"
version = "0.0.0"
edition = "2021"
license = "CC0"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = "2.1.0"
tree-sitter = "0.20.6"
walkdir = "2.3.2"
xdg = "2.4.1"

[dev-dependencies]
executable-path = "1.0.0"

[build-dependencies]
cc = "1.0.73"
